Added section backgrounds with scroll effects.  Added real clients to the grid.  Added licensing section

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <meta charset="UTF-8">
-    <meta name="description" content="A cannabis focused marketing agency" />
+    <meta name="description" content="Green Street enables brands to connect to influencers and consumers through non-traditional means, building brand awareness and loyalty" />
     <meta property="og:title" content="Green St. - A Cannabis Creative Agency" />
     <meta property="og:site_name" content="Green St."/>
     <meta property="og:url" content="http://www.greenstreetagency.com" />
-    <meta property="og:description" content="A cannabis focused marketing agency" />
+    <meta property="og:description" content="Green Street enables brands to connect to influencers and consumers through non-traditional means, building brand awareness and loyalty" />
     <meta property="og:image" content="/img/favicon/favicon-500x500.png">
     <meta property="og:image" content="/img/favicon/og-share.png">
     @@include('./partials/favicon.html')
@@ -30,6 +30,8 @@
         @@include('./partials/section_touch_points.html')
 
         @@include('./partials/section_executions.html')
+
+        @@include('./partials/section_licensing.html')
 
         @@include('./partials/section_process.html')
 
