--- a/public/src/index.html
+++ b/public/src/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Green Street enables brands to connect to influencers and consumers through non-traditional means, building brand awareness and loyalty" />
     <meta property="og:title" content="Green St. - A Cannabis Creative Agency" />
     <meta property="og:site_name" content="Green St."/>
-    <meta property="og:url" content="http://www.greenstreetagency.com" />
+    <meta property="og:url" content="http://greenstreetagency.com" />
     <meta property="og:description" content="Green Street enables brands to connect to influencers and consumers through non-traditional means, building brand awareness and loyalty" />
     <meta property="og:image" content="/img/favicon/favicon-500x500.png">
     <meta property="og:image" content="/img/favicon/og-share.png">
