--- a/public/src/index.html
+++ b/public/src/index.html
@@ -42,9 +42,20 @@
       </div>
     </div>
 
-    @@include('./partials/contact_overlay.html')
+    @@include('./partials/overlay_contact.html')
+    @@include('./partials/overlay_privacy.html')
 
     <script type="text/javascript" src="/js/app.js"></script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-63021600-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 
   </body>
 </html>
