End of day commit.  Updated client images, backgrounds.  Added another section for celebrity licensing

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -32,6 +32,8 @@
 
     @@include('./partials/section_licensing.html')
 
+    @@include('./partials/section_compliance.html')
+
     @@include('./partials/section_clients.html')
 
     @@include('./partials/contact_us.html')
