--- a/public/src/index.html
+++ b/public/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Green Street enables brands to connect to influencers and consumers through non-traditional means, building brand awareness and loyalty" />
     <meta property="og:title" content="Green St. - A Cannabis Creative Agency" />
     <meta property="og:site_name" content="Green St."/>
