Removed client grid section from the site.  Added client logos to the closing panel

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -35,9 +35,9 @@
 
     @@include('./partials/section_compliance.html')
 
-    @@include('./partials/section_clients.html')
+    <!-- @@include('./partials/section_clients.html') -->
 
-    @@include('./partials/contact_us.html')
+    @@include('./partials/closing.html')
 
     @@include('./partials/footer.html')
 
